test/errors/type/collections/set/__ge3.yasl
echo mt.lookup(collections.set(), .__ge)(1, true)
